--- a/style.css
+++ b/style.css
@@ -163,18 +163,17 @@ nav {
 
 .language{
     width: 150px;
-    display: flex;
-    align-items: center;
 }
 
 .language__img--wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px;
+    padding: 25px 16px;
 }
 
 .languages__list{
     display: flex;
-    width:100px;   
+    width:100px;  
+    flex-wrap: wrap; 
 }
